Revert "Center second-row trust badges on desktop"
This reverts commit 769604e69c62f1d7e13b642698d3bcdbee5825e1.

--- a/public/car-accident-lawyer.html
+++ b/public/car-accident-lawyer.html
@@ -689,7 +689,7 @@
         }
         .trust-badges-row {
             display: grid;
-            grid-template-columns: repeat(4, minmax(120px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
             gap: 24px 28px;
             align-items: center;
             justify-items: center;
@@ -708,9 +708,6 @@
             opacity: 1;
             transition: all 0.3s ease;
             filter: none;
-        }
-        .trust-badges-row img:nth-child(n + 5) {
-            grid-column: span 2;
         }
         .trust-badges-row img[alt="CAOC"] {
             order: -1;
@@ -1896,7 +1893,6 @@
     </footer>
 </body>
 </html>
-
 
 
 
