--- a/public/index.html
+++ b/public/index.html
@@ -675,7 +675,7 @@
         }
         .trust-badges-row {
             display: grid;
-            grid-template-columns: repeat(4, minmax(120px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
             gap: 24px 28px;
             align-items: center;
             justify-items: center;
@@ -694,9 +694,6 @@
             opacity: 1;
             transition: all 0.3s ease;
             filter: none;
-        }
-        .trust-badges-row img:nth-child(n + 5) {
-            grid-column: span 2;
         }
         .trust-badges-row img[alt="CAOC"] {
             order: -1;
@@ -1873,7 +1870,6 @@
     </footer>
 </body>
 </html>
-
 
 
 
