--- a/lp-local.html
+++ b/lp-local.html
@@ -238,11 +238,7 @@
             width: auto;
             opacity: 0.85;
         }
-        @media (min-width: 769px) {
-            .trust-badges-row img[src="/images/la/trust-badge-4.webp"] {
-                display: none;
-            }
-        }.video-section {
+        .video-section {
             background: #ffffff;
             border-radius: 12px;
             padding: 40px;
@@ -450,7 +446,7 @@
             font-size: 12px;
             color: #718096;
         }
-        
+        @media (max-width: 768px) {
             h1 {
                 font-size: 32px;
             }
