Revert "Animate case results on scroll"
This reverts commit bc4051a591d5c01a999de4896bebac6ca28341f2.

--- a/public/insider-accident-lawyer.html
+++ b/public/insider-accident-lawyer.html
@@ -1278,47 +1278,6 @@
       margin-bottom: 24px !important;
     }
   }
-  /* Case results animation + confetti */
-  .case-results {
-    position: relative;
-    overflow: hidden;
-  }
-  .case-results .result-card {
-    transition: transform 0.35s ease, box-shadow 0.35s ease;
-  }
-  .case-results.case-results-burst .result-card {
-    animation: case-results-pop 600ms ease both;
-  }
-  .case-results .result-amount,
-  .case-results .settlement-amount {
-    display: inline-block;
-    font-variant-numeric: tabular-nums;
-    letter-spacing: 0.5px;
-  }
-  .case-results-confetti {
-    pointer-events: none;
-    position: absolute;
-    inset: 0;
-    z-index: 2;
-  }
-  .case-results-confetti span {
-    position: absolute;
-    width: 8px;
-    height: 14px;
-    opacity: 0;
-    transform: translate(-50%, -50%) scale(0.8);
-    animation: case-results-confetti 1200ms ease-out forwards;
-  }
-  @keyframes case-results-pop {
-    0% { transform: scale(1); }
-    35% { transform: scale(1.03); }
-    100% { transform: scale(1); }
-  }
-  @keyframes case-results-confetti {
-    0% { opacity: 0; transform: translate(-50%, -50%) scale(0.8) rotate(0deg); }
-    10% { opacity: 1; }
-    100% { opacity: 0; transform: translate(var(--tx), var(--ty)) scale(1) rotate(180deg); }
-  }
 </style>
     <!-- GTM injected at top of head -->
     <!-- Google Tag Manager -->
@@ -1917,113 +1876,7 @@ document.addEventListener('DOMContentLoaded',function(){
     }
   });
 });
-</script><script>
-// case-results-animate
-document.addEventListener('DOMContentLoaded', function () {
-  var sections = document.querySelectorAll('.case-results');
-  if (!sections.length) return;
-
-  function formatMoney(n) {
-    return '
-</html>
-
-
-
-
-
-
-
-
-
- + Math.round(n).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
-  }
-
-  function animateValue(el, target, duration) {
-    var start = 0;
-    var startTime = null;
-    function step(ts) {
-      if (!startTime) startTime = ts;
-      var progress = Math.min((ts - startTime) / duration, 1);
-      var current = start + (target - start) * progress;
-      el.textContent = formatMoney(current);
-      if (progress < 1) requestAnimationFrame(step);
-    }
-    requestAnimationFrame(step);
-  }
-
-  function animateNumbers(section) {
-    var amounts = section.querySelectorAll('.result-amount');
-    amounts.forEach(function (el) {
-      var raw = el.textContent.replace(/[^0-9]/g, '');
-      var target = parseInt(raw || '0', 10);
-      if (!target) return;
-      el.textContent = '</body>';
-      animateValue(el, target, 1200);
-    });
-
-    var settlementCards = section.querySelectorAll('.settlement-card');
-    settlementCards.forEach(function (card) {
-      if (card.querySelector('.settlement-amount')) return;
-      var match = card.textContent.match(/\$[\d,]+/);
-      if (!match) return;
-      var amountText = match[0];
-      var target = parseInt(amountText.replace(/[^0-9]/g, ''), 10);
-      var span = document.createElement('span');
-      span.className = 'settlement-amount';
-      span.textContent = '</body>';
-      var html = card.innerHTML.replace(amountText, span.outerHTML);
-      card.innerHTML = html;
-      var inserted = card.querySelector('.settlement-amount');
-      if (inserted) animateValue(inserted, target, 1100);
-    });
-  }
-
-  function burstConfetti(section) {
-    if (section.querySelector('.case-results-confetti')) return;
-    var confetti = document.createElement('div');
-    confetti.className = 'case-results-confetti';
-    var colors = ['#ffd24d', '#ff7a59', '#3bb4ff', '#56d48b', '#ff4d6d'];
-    for (var i = 0; i < 18; i++) {
-      var piece = document.createElement('span');
-      var left = 40 + Math.random() * 20;
-      var top = 30 + Math.random() * 10;
-      var tx = (Math.random() - 0.5) * 320 + 'px';
-      var ty = (Math.random() * 220 + 120) + 'px';
-      piece.style.left = left + '%';
-      piece.style.top = top + '%';
-      piece.style.background = colors[i % colors.length];
-      piece.style.setProperty('--tx', tx);
-      piece.style.setProperty('--ty', ty);
-      piece.style.animationDelay = (Math.random() * 150) + 'ms';
-      confetti.appendChild(piece);
-    }
-    section.appendChild(confetti);
-    setTimeout(function () {
-      if (confetti && confetti.parentNode) confetti.parentNode.removeChild(confetti);
-    }, 1500);
-  }
-
-  var observer = new IntersectionObserver(function (entries) {
-    entries.forEach(function (entry) {
-      if (!entry.isIntersecting) return;
-      var section = entry.target;
-      if (section.dataset.animated) return;
-      section.dataset.animated = 'true';
-      section.classList.add('case-results-burst');
-      animateNumbers(section);
-      burstConfetti(section);
-      setTimeout(function () {
-        section.classList.remove('case-results-burst');
-      }, 900);
-    });
-  }, { threshold: 0.4 });
-
-  sections.forEach(function (section) {
-    observer.observe(section);
-  });
-});
-</script>
-</body>
+</script></body>
 </html>
 
 
